--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,14 @@
     transform: rotate(360deg);
   }
 }
+
+.login-container {
+  width: 30%;
+  margin: auto;
+}
+
+.request-container {
+  width: 30rem;
+  margin: auto;
+  margin-top: 20px;
+}
